--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,6 +16,8 @@
   </div>
 </div>
 
+
+
 {{#if restaurants}}
 <!-- restaurant list -->
 <div class="container mt-5">
@@ -24,13 +26,12 @@
       <div class="card-columns">
       
         {{#each restaurants}}
-          <a href="/restaurants/{{this.id}}" class="text-secondary">
+          <a href="./restaurants/{{this.id}}" class="text-secondary">
             <div class="card mb-3">
               <img class="card-img-top" src="{{this.image}}"
                 alt="{{this.name}}">
               <div class="card-body p-3">
-                <h6 class="card-title mb-1">{{this.name}}</h6>
-          
+                  <h6 class="card-title mb-1">{{this.name}}</h6>
                 <div class="restaurant-category mb-1">
                   <i class="fas fa-utensils pr-2"></i> {{this.category}}
                 </div>
@@ -41,7 +42,7 @@
 
                 <div class="card-footer">
                   <div class="row justify-content-around">
-                    <a href="#" class="btn btn-primary">Edit</a>
+                    <a href="./restaurants/{{ this._id }}/edit" class="btn btn-primary">Edit</a>
                     <a href="./restaurants/{{ this._id }}" class="btn btn-primary">Detail</a>
                     <form action="./restaurants/{{ this._id }}/delete" method="POST" style="display:inline;">
                       <button type="submit" class="btn btn-danger fas fa-trash-alt align-text-center"></button>
