--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,6 +21,11 @@
             width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
           我的餐廳清單
         </a>
+        <a href="./restaurants/new">
+          <button class="btn btn-major" type="submit" id="search-button">Create New</button>
+        </a>
+
+        
       </div>
     </nav>
   
