--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,7 +26,7 @@
       <div class="card-columns">
       
         {{#each restaurants}}
-          <a href="./restaurants/{{this.id}}" class="text-secondary">
+          <a href="./restaurants/{{this._id}}" class="text-secondary">
             <div class="card mb-3">
               <img class="card-img-top" src="{{this.image}}"
                 alt="{{this.name}}">
@@ -39,7 +39,7 @@
                   {{this.rating}}
                   <i class="fas fa-star fa-xs"></i>
                 </span>
-
+          
                 <div class="card-footer">
                   <div class="row justify-content-around">
                     <a href="./restaurants/{{ this._id }}/edit" class="btn btn-primary">Edit</a>
