--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,11 +21,7 @@
             width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
           我的餐廳清單
         </a>
-        <a href="./restaurants/new">
-          <button class="btn btn-major" type="submit" id="search-button">Create New</button>
-        </a>
-
-        
+        <a class="btn btn-outline-info" href="/restaurants/new" class=""><i class="fas fa-folder-plus"></i>  Create New</a>
       </div>
     </nav>
   
