--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,45 +1,51 @@
+<div class="container">
+  <div class="col-12 text-center mb-3 mt-3">
+    <h3>新增餐廳資料</h3>
+  </div>
+</div>
+
 <form action="/restaurants" method="POST" class="column">
   <div class="input-group mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon1">Name</span>
     </div>
-    <input type="text" placeholder="name" name="name" value="{{ restaurant.name }}">
+    <input class="form-control" type="text" placeholder="name" name="name">
   </div>
   <div class="input-group mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon2">Category</span>
     </div>
-    <input type="text" placeholder="category" name="category" value="{{ restaurant.category }}">
+    <input class="form-control" type="text" placeholder="category" name="category">
   </div>
   <div class="input-group mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon3">Image</span>
     </div>
-    <input type="text" placeholder="image" name="image" value="{{ restaurant.image }}">
+    <input class="form-control" type="text" placeholder="image" name="image">
   </div>
   <div class="input-group mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon4">Location</span>
     </div>
-    <input type="text" placeholder="location" name="location" value="{{ restaurant.location }}">
+    <input class="form-control" type="text" placeholder="location" name="location">
   </div>
   <div class="input-group mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon5">Phone</span>
     </div>
-    <input type="text" placeholder="phone" name="phone" value="{{ restaurant.phone }}">
+    <input class="form-control" type="text" placeholder="phone" name="phone">
   </div>
   <div class="input-group col mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon6">Rating</span>
     </div>
-    <input type="number" max="5" min="0" step="0.1" placeholder="0.0" name="rating" value="{{ restaurant.rating }}">
+    <input class="form-control" type="number" max="5" min="0" step="0.1" placeholder="0.0" name="rating">
   </div>
   <div class="input-group mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text " id="basic-addon7">Description</span>
     </div>
-    <input type="text" placeholder="description" name="description" value="{{ restaurant.description }}">
+    <input class="form-control" type="text" placeholder="description" name="description">
   </div>
 
 
@@ -47,9 +53,11 @@
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon8">Google map</span>
     </div>
-    <input type="text" placeholder="google_map" name="google_map" value="{{ restaurant.google_map }}">
+    <input class="form-control" type="text" placeholder="google_map" name="google_map">
   </div>
-
-  <button type="submit">Save</button>
-  <a href="/">back</a>
+  <div class="d-flex justify-content-center mb-3">
+    <button type="submit" class="btn btn-success mr-2">Save</button>
+    <a href="/" class="btn btn-dark">back</a>
+  </div>
+  
 </form>
