--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,55 +1,71 @@
-<form action="/restaurants/{{ restaurant._id }}/edit" method="POST" class="column">
-  <div class="input-group mb-3 col-12 col-md-10 mx-auto">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon1">Name</span>
-    </div>
-    <input type="text" placeholder="name" name="name" value="{{ restaurant.name }}">
+<div class="container">
+  <div class="col-12 text-center mb-3 mt-3">
+    <h3>修改餐廳資料</h3>
   </div>
-  <div class="input-group mb-3 col-12 col-md-10 mx-auto">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon2">Category</span>
-    </div>
-    <input type="text" placeholder="category" name="category" value="{{ restaurant.category }}">
-  </div>
-  <div class="input-group mb-3 col-12 col-md-10 mx-auto">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon3">Image</span>
-    </div>
-    <input type="text" placeholder="image" name="image" value="{{ restaurant.image }}">
-  </div>
-  <div class="input-group mb-3 col-12 col-md-10 mx-auto">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon4">Location</span>
-    </div>
-    <input type="text" placeholder="location" name="location" value="{{ restaurant.location }}">
-  </div>
-  <div class="input-group mb-3 col-12 col-md-10 mx-auto">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon5">Phone</span>
-    </div>
-    <input type="text" placeholder="phone" name="phone" value="{{ restaurant.phone }}">
-  </div>
-  <div class="input-group col mb-3 col-12 col-md-10 mx-auto">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon6">Rating</span>
-    </div>
-    <input type="number" max="5" min="0" step="0.1" placeholder="0.0" name="rating" value="{{ restaurant.rating }}">
-  </div>
-  <div class="input-group mb-3 col-12 col-md-10 mx-auto">
-    <div class="input-group-prepend">
-      <span class="input-group-text " id="basic-addon7">Description</span>
-    </div>
-    <input type="text" placeholder="description" name="description" value="{{ restaurant.description }}">
-  </div>
-  
+</div>
 
-  <div class="input-group mb-3 col-12 col-md-10 mx-auto">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon8">Google map</span>
-    </div>
-    <input type="text" placeholder="google_map" name="google_map" value="{{ restaurant.google_map }}">
-  </div>
+<div class="row text-center">
+  <div class="col-12 mx-auto ">
+    <form action="/restaurants/{{ restaurant._id }}/edit" method="POST" class="column">
+      <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon1">Name</span>
+        </div>
+        <input class="form-control" type="text" name="name" value="{{ restaurant.name }}" required>
+      </div>
+      <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon2">Category</span>
+        </div>
+        <input class="form-control" type="text" placeholder="category" name="category"
+          value="{{ restaurant.category }}">
+      </div>
+      <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon3">Image</span>
+        </div>
+        <input class="form-control" type="text" placeholder="image" name="image" value="{{ restaurant.image }}">
+      </div>
+      <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon4">Location</span>
+        </div>
+        <input class="form-control" type="text" placeholder="location" name="location"
+          value="{{ restaurant.location }}">
+      </div>
+      <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon5">Phone</span>
+        </div>
+        <input class="form-control" type="text" placeholder="phone" name="phone" value="{{ restaurant.phone }}">
+      </div>
+      <div class="input-group col mb-3 col-12 col-md-10 mx-auto justify-content-center">
+        <div class="input-group-prepend">
+          <span class="input-group-text col-12" id="basic-addon6">Rating</span>
+        </div>
+        <input class="form-control" type="number" max="5" min="0" step="0.1" placeholder="0.0" name="rating"
+          value="{{ restaurant.rating }}">
+      </div>
+      <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
+        <div class="input-group-prepend">
+          <span class="input-group-text " id="basic-addon7">Description</span>
+        </div>
+        <input class="form-control" type="text" placeholder="description" name="description"
+          value="{{ restaurant.description }}">
+      </div>
+      <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon8">Google map</span>
+        </div>
+        <input class="form-control" type="text" placeholder="google_map" name="google_map"
+          value="{{ restaurant.google_map }}">
+      </div>
 
-  <button type="submit">Save</button>
-  <a href="/">back</a>
-</form>
+      <div class="d-flex justify-content-center mb-3">
+        <button type="submit" class="btn btn-success mr-2">Save</button>
+        <a href="/" class="btn btn-dark">back</a>
+      </div>
+    </form>
+
+  </div>
+</div>
