--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -5,7 +5,7 @@
       <div class="col-md-10 mx-auto mb-3 justify-content-end">
         <a href="/restaurants/{{ restaurant._id }}/edit" class="btn btn-primary">Edit</a>
       <form action="/restaurants/{{ restaurant._id }}/delete" method="POST" style="display:inline;">
-        <button type="submit" class="btn btn-danger fas fa-trash-alt align-text-center"></button>
+        <button type="submit" class="btn btn-danger fas fa-trash-alt align-text-center" style="height:100%"></button>
       </form>
       </div>
     
