feat: add method-override

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,7 +42,7 @@
                   <div class="row justify-content-around">
                     <a href="./restaurants/{{ this._id }}/edit" class="btn btn-primary">Edit</a>
                     <a href="./restaurants/{{ this._id }}" class="btn btn-primary">Detail</a>
-                    <form action="./restaurants/{{ this._id }}/delete" method="POST" style="display:inline;">
+                    <form action="./restaurants/{{ this._id }}?_method=DELETE" method="POST" style="display:inline;">
                       <button type="submit" class="btn btn-danger fas fa-trash-alt align-self-center" style="height:100%"></button>
                     </form>
                   </div>
