--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -6,7 +6,7 @@
 
 <div class="row text-center">
   <div class="col-12 mx-auto ">
-    <form action="/restaurants/{{ restaurant._id }}/edit" method="POST" class="column">
+    <form action="/restaurants/{{ restaurant._id }}?_method=PUT" method="POST" class="column">
       <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1">Name</span>
