--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,8 +26,13 @@
     </nav>
     <div class="banner"></div>
   </header>
-
-  {{{ body }}}
+  
+  <main>
+    <div class="container mt-3">
+      {{{ body }}}
+    </div>
+  </main>
+ 
   <script src="/javascripts/jquery-3.3.1.js"></script>
   <script src="/javascripts/popper.js"></script>
   <script src="/javascripts/bootstrap.js"></script>
