--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -18,47 +18,47 @@
           <span class="input-group-text" id="basic-addon2">Category</span>
         </div>
         <input class="form-control" type="text" placeholder="category" name="category"
-          value="{{ restaurant.category }}">
+          value="{{ restaurant.category }}" required>
       </div>
       <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon3">Image</span>
         </div>
-        <input class="form-control" type="text" placeholder="image" name="image" value="{{ restaurant.image }}">
+        <input class="form-control" type="text" placeholder="image" name="image" value="{{ restaurant.image }}" required>
       </div>
       <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon4">Location</span>
         </div>
         <input class="form-control" type="text" placeholder="location" name="location"
-          value="{{ restaurant.location }}">
+          value="{{ restaurant.location }}" required>
       </div>
       <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon5">Phone</span>
         </div>
-        <input class="form-control" type="text" placeholder="phone" name="phone" value="{{ restaurant.phone }}">
+        <input class="form-control" type="text" placeholder="phone" name="phone" value="{{ restaurant.phone }}" required>
       </div>
       <div class="input-group col mb-3 col-12 col-md-10 mx-auto justify-content-center">
         <div class="input-group-prepend">
           <span class="input-group-text col-12" id="basic-addon6">Rating</span>
         </div>
         <input class="form-control" type="number" max="5" min="0" step="0.1" placeholder="0.0" name="rating"
-          value="{{ restaurant.rating }}">
+          value="{{ restaurant.rating }}" required>
       </div>
       <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
         <div class="input-group-prepend">
-          <span class="input-group-text " id="basic-addon7">Description</span>
+          <span class="input-group-text" id="basic-addon7">Description</span>
         </div>
         <input class="form-control" type="text" placeholder="description" name="description"
-          value="{{ restaurant.description }}">
+          value="{{ restaurant.description }}" required>
       </div>
       <div class="input-group mb-3 col-12 col-md-10 mx-auto justify-content-center">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon8">Google map</span>
         </div>
         <input class="form-control" type="text" placeholder="google_map" name="google_map"
-          value="{{ restaurant.google_map }}">
+          value="{{ restaurant.google_map }}" required>
       </div>
 
       <div class="d-flex justify-content-center mb-3">
