--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,12 +13,26 @@
         </div>
       </form>
     </div>
+  </div>  
+  <div class="d-flex justify-content-end">
+        <div class="d-flex justify-content-end">
+      <div class="btn-group mt-3">
+        <button type="button" class="btn btn-dark-outline dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><b>Sort</b>
+        </button>
+        <div class="dropdown-menu dropdown-menu-right">
+          <a href="/restaurants/AtoZ" class="dropdown-item" type="button">A -> Z</a>
+          <a href="/restaurants/ZtoA" class="dropdown-item" type="button">Z -> A</a>
+          <a href="/restaurants/Category" class="dropdown-item" type="button">類別</a>
+          <a href="/restaurants/location" class="dropdown-item" type="button">區域</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
 {{#if restaurants }}
 <!-- restaurant list -->
-<div class="container mt-5">
+<div class="container mt-3">
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
       <div class="card-columns">
@@ -39,9 +53,9 @@
                 </span>
           
                 <div class="card-footer">
-                  <div class="row justify-content-around">
-                    <a href="./restaurants/{{ this._id }}/edit" class="btn btn-primary">Edit</a>
-                    <a href="./restaurants/{{ this._id }}" class="btn btn-primary">Detail</a>
+                  <div class="row justify-content-end">
+                    <a href="./restaurants/{{ this._id }}/edit" class="btn"><u>Edit</u></a>
+                    <a href="./restaurants/{{ this._id }}" class="btn"><u>Detail</u></a>
                     <form action="./restaurants/{{ this._id }}?_method=DELETE" method="POST" style="display:inline;">
                       <button type="submit" class="btn btn-danger fas fa-trash-alt align-self-center" style="height:100%"></button>
                     </form>
