--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -9,43 +9,43 @@
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon1">Name</span>
     </div>
-    <input class="form-control" type="text" placeholder="name" name="name">
+    <input class="form-control" type="text" placeholder="name" name="name" required>
   </div>
   <div class="input-group mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon2">Category</span>
     </div>
-    <input class="form-control" type="text" placeholder="category" name="category">
+    <input class="form-control" type="text" placeholder="category" name="category" required>
   </div>
   <div class="input-group mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon3">Image</span>
     </div>
-    <input class="form-control" type="text" placeholder="image" name="image">
+    <input class="form-control" type="text" placeholder="image" name="image" required>
   </div>
   <div class="input-group mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon4">Location</span>
     </div>
-    <input class="form-control" type="text" placeholder="location" name="location">
+    <input class="form-control" type="text" placeholder="location" name="location" required>
   </div>
   <div class="input-group mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon5">Phone</span>
     </div>
-    <input class="form-control" type="text" placeholder="phone" name="phone">
+    <input class="form-control" type="text" placeholder="phone" name="phone" required>
   </div>
   <div class="input-group col mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon6">Rating</span>
     </div>
-    <input class="form-control" type="number" max="5" min="0" step="0.1" placeholder="0.0" name="rating">
+    <input class="form-control" type="number" max="5" min="0" step="0.1" placeholder="rate from 0 to 5" name="rating" required>
   </div>
   <div class="input-group mb-3 col-12 col-md-10 mx-auto">
     <div class="input-group-prepend">
       <span class="input-group-text " id="basic-addon7">Description</span>
     </div>
-    <input class="form-control" type="text" placeholder="description" name="description">
+    <input class="form-control" type="text" placeholder="description" name="description" required>
   </div>
 
 
@@ -53,7 +53,7 @@
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon8">Google map</span>
     </div>
-    <input class="form-control" type="text" placeholder="google_map" name="google_map">
+    <input class="form-control" type="text" placeholder="google_map" name="google_map" required>
   </div>
   <div class="d-flex justify-content-center mb-3">
     <button type="submit" class="btn btn-success mr-2">Save</button>
